--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
                     <img src="./assets/images/icon-search.svg" alt="" class="search-icon">
                     <input 
                         type="text"
-                        class="input search-input"
+                        class="input-search-input"
                         id="searchInput"
                         placeholder="Search for a place..."
                         autocomplete="off"
                         aria-label="Search for a location"
                         >
                 </div>
-                <button class="btn btn-primary search-button" id="searchButton">Search</button>
+                <button class="btn-btn-primary-search-button" id="searchButton">Search</button>
                 
                 <!-- Search Result -->
-                <div class="search-results" id="searchResults" role="listbox" aria-label="Search suggestions" hidden>
+                <div class="search-results" id="searchResults" role="listbox" aria-label="Search suggestions" hidden >
                     <div class="search-result" role="option" aria-selected="false">Berlin, Germany</div>
                     <div class="search-result" role="option" aria-selected="false">Munich, Germany</div>
                     <div class="search-result" role="option" aria-selected="false">Hamburg, Germany</div>
