--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
                 
                 <div class="units-menu" id="unitsMenu" role="menu" aria-label="Unit selection" hidden>
                     <div class="units-section">
-                        <button class="optionButton" id="imperialSwitch"  role="menuitem">
-                            Switch to imperial
-                            <img src="./assets/images/icon-checkmark.svg" alt="">
-                        </button>
+                        <div class="utins-options">
+                            <button class="optionButton" id="imperialSwitch"  role="menuitem">
+                                Switch to imperial
+                                <img src="./assets/images/icon-checkmark.svg" alt="">
+                            </button>
+                        </div>
+
                     </div>
                     
                     <div class="units-section">
