--- a/index.html
+++ b/index.html
@@ -23,21 +23,20 @@
                 </button>
                 
                 <div class="units-menu" id="unitsMenu" role="menu" aria-label="Unit selection" hidden>
-                    <div class="units-section">
-                        <div class="units-options">
-                            <button class="optionButton" id="imperialSwitch"  role="menuitem">
-                                Switch to imperial
-                                <img src="./assets/images/icon-checkmark.svg" alt="">
-                            </button>
-                        </div>
-
+                <div class="units-section">
+                    <div class="units-options">
+                        <button class="imperial-switch" id="imperialSwitch" role="menuitem">
+                            Switch to imperial
+                            <img src="./assets/images/icon-checkmark.svg" alt="">
+                        </button>
                     </div>
+                </div>
                     
                     <div class="units-section">
                         Temperature
                         <div class="units-options">
                             <button class="optionButton" id="celsius" role="menuitem">
-                                Cellsius (°C)
+                                Celsius (°C)  <!-- Change from "Cellsius" to "Celsius" -->
                                 <img src="./assets/images/icon-checkmark.svg" alt="">
                             </button>
                             <button class="optionButton" id="fahrenheit" role="menuitem">
